--- a/src/style.css
+++ b/src/style.css
@@ -19,11 +19,12 @@ h1 {
 }
 
 .container div {
-  width: 500px;
+  width: 600px;
 }
 
 .container div h2 {
   margin-bottom: 20px;
+  font-size: 25px;
 }
 
 /* Chrome, Safari, Edge, Opera */
@@ -43,12 +44,15 @@ input[type=number] {
   width: 100px;
   padding: 10px;
   outline: none;
-  border: 1px solid black;
   border-radius: 5px;
+  border: 2px solid rgb(21, 20, 20);
+  box-shadow: 5px 5px rgb(21, 20, 20);
+  font-size: 20px;
 }
 
 .board {
   border: 2px solid black;
+  font-size: 20px;
 }
 
 li:nth-child(odd) {
@@ -69,6 +73,7 @@ li:nth-child(even) {
   list-style: none;
   margin: 1px;
   text-align: center;
+  font-size: 20px;
 }
 
 .container form {
@@ -79,15 +84,21 @@ li:nth-child(even) {
 }
 
 .container form input {
-  width: 200px;
+  width: 270px;
   padding: 12px;
   outline: none;
   border: 1px solid black;
   border-radius: 5px;
+  font-size: 20px
 }
 
 .control {
   display: flex;
   justify-content: center;
   gap: 30px;
+}
+
+.container form :nth-child(4){
+  border: 2px solid rgb(21, 20, 20);
+  box-shadow: 5px 5px rgb(21, 20, 20);
 }
