--- a/src/style.css
+++ b/src/style.css
@@ -89,7 +89,7 @@ li:nth-child(even) {
   outline: none;
   border: 1px solid black;
   border-radius: 5px;
-  font-size: 20px
+  font-size: 20px;
 }
 
 .control {
@@ -98,7 +98,7 @@ li:nth-child(even) {
   gap: 30px;
 }
 
-.container form :nth-child(4){
+.container form :nth-child(4) {
   border: 2px solid rgb(21, 20, 20);
   box-shadow: 5px 5px rgb(21, 20, 20);
 }
